# cub3D

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: action-MAC.yml  action.yml
data/maps/: default.cub  normal.cub  rectangle.cub  test1.cub  test2
docs/: Doxyfile
docs/html/: 42_8md.html  Basics_8md.html  CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  Colors_8md.html  Functions_8md.html  Hooks_8md.html  Images_8md.html  Input_8md.html  MLX42_8h.html  MLX42_8h__dep__incl.md5  MLX42_8h__incl.md5  MLX42_8h_a06dbfde4fce913678e09b0af263b0c06_cgraph.md5  MLX42_8h_a06dbfde4fce913678e09b0af263b0c06_icgraph.md5  MLX42_8h_a140fd59feca1fefb31944cf074fc4c87_cgraph.md5  MLX42_8h_a2d365ea2e3844959187b6978c6e05171_icgraph.md5  MLX42_8h_a38c0b46353a7c9a1e2b6222f2d7126eb_cgraph.md5  MLX42_8h_a3c7e4790683c2dbc5159cb3a18c22e0b_cgraph.md5  MLX42_8h_a4e43a95dd957b6771633389dc650003d_cgraph.md5  MLX42_8h_a72eecffc4e044413e45e9b5bfb1feda8_icgraph.md5  MLX42_8h_a997cfd3dd07ea85a91df958ae0d1e7b5_cgraph.md5  MLX42_8h_ac4bd53ff1f88113c67d2b020f1809512_cgraph.md5  MLX42_8h_aeca3680814ced1c4e67603419a2b3b8e_icgraph.md5  MLX42_8h_afa6aa2f79f9fc81735bdf3b92421f9ca_icgraph.md5  MLX42_8h_afc772cc4204df8de0388e9bb38768d10_icgraph.md5  MLX42_8h_source.html  MLX42__Input_8h.html  MLX42__Input_8h__dep__incl.md5  MLX42__Input_8h_source.html  MLX42__Int_8h.html  MLX42__Int_8h__dep__incl.md5  MLX42__Int_8h__incl.md5  MLX42__Int_8h_a0e833de4c4de8a1e06a313514f82eba3_icgraph.md5  MLX42__Int_8h_a1ed852c03c55e288332fed9019ce0fc0_icgraph.md5  MLX42__Int_8h_a3526094b6976d5e65ade883d3ed3d522_icgraph.md5  (+888 more)
docs/latex/: 42_8md.tex  Basics_8md.tex  CMakeCCompilerId_8c.tex  CMakeCCompilerId_8c.tex.tmp  CMakeCCompilerId_8c_source.tex  CMakeCXXCompilerId_8cpp.tex  CMakeCXXCompilerId_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.dot  CMakeCXXCompilerId_8cpp_source.tex  CODE__OF__CONDUCT_8md.tex  CONTRIBUTING_8md.tex  Colors_8md.tex  Functions_8md.tex  Hooks_8md.tex  Images_8md.tex  Input_8md.tex  MLX42_8h.tex  MLX42_8h.tex.tmp  MLX42_8h__dep__incl.dot  MLX42_8h__incl.dot  MLX42_8h_a010df0dc1115d0904bbe370cc51c7a56_cgraph.dot  MLX42_8h_a06dbfde4fce913678e09b0af263b0c06_cgraph.dot  MLX42_8h_a06dbfde4fce913678e09b0af263b0c06_icgraph.dot  MLX42_8h_a140fd59feca1fefb31944cf074fc4c87_cgraph.dot  MLX42_8h_a2d365ea2e3844959187b6978c6e05171_icgraph.dot  MLX42_8h_a32988a5ce7aaa25a448b61b0ac410cec_cgraph.dot  MLX42_8h_a3c7e4790683c2dbc5159cb3a18c22e0b_cgraph.dot  MLX42_8h_a4e43a95dd957b6771633389dc650003d_cgraph.dot  MLX42_8h_a5234b5f5d093fa79366df2f94c9bcb28_icgraph.dot  MLX42_8h_a72eecffc4e044413e45e9b5bfb1feda8_icgraph.dot  MLX42_8h_source.tex  MLX42__Input_8h.tex  (+728 more)
include/: cub3D.h  libft.h
src/: cub3D.c  draw_map.c  draw_map_utils.c  draw_map_utils2.c  draw_map_utils3.c  draw_map_utils4.c  draw_textures.c  error_handling.c  grid.c  hook_movements.c  hook_movements_2.c  main.c  mlx_wrappers.c  read_map.c
tests/: CMakeLists.txt  hello_test.cc
(+156 files in other folders)
